--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-maps-react": "^2.0.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
